<resources>
    <string name="app_name">Tetris</string>
    <string name="start_game">Play</string>
    <string name="ranking_list">LeaderBoard</string>
    <string name="continue_playing">Continue Playing</string>
    <string name="next_block_preview">Next_Block_Preview</string>
    <string name="top_score">NumberOne</string>
    <string name="current_score">Score</string>
    <string name="game_restart">Restart</string>
    <string name="game_pause">Pause</string>
    <string name="game_continue">Continue</string>
    <string name="game_left">Left</string>
    <string name="game_right">Right</string>
    <string name="game_down">Down</string>
    <string name="game_fall">Fall</string>
    <string name="game_spin">Spin</string>
    <string name="game_rank">Rank</string>
    <string name="rank_name">Name</string>
    <string name="rank_score">Score</string>
    <string name="game_over">GameOver</string>
    <string name="record_score">Record score</string>
    <string name="add_name">If you agree, please enter your name below</string>
    <string name="add_cancel">Cancel</string>
    <string name="add_finish">Finish</string>
    <string name="enter_name">please enter your name</string>
    <string name="add_congratulations">Congratulations, you got %1$s points! The record will be saved to the leaderboard</string>
    <string name="language">Lanauage</string>
    <string name="btn_en">ENGLISH</string>
    <string name="btn_zh">中文(简体)</string>
    <string name="appwidget_text">Query the Leaderboard</string>
    <string name="add_widget">Add widget</string>
</resources>
