<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/background">

    <Button
        android:id="@+id/btn_change_language"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:background="@color/colorYellow"
        android:layout_gravity="right"
        android:textAllCaps="false"/>

    <!--<Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/languages"/>-->

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/bg_btn2"
        android:layout_marginTop="180dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_playing"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/bg_btn2"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btn_start_game"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_list"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/ranking_list"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/bg_btn2"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

</LinearLayout>