<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--游戏区域-->
        <FrameLayout
            android:id="@+id/layout_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        //信息辅助控制区域
        <LinearLayout
            android:id="@+id/assist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">

            //计时器
            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:layout_marginBottom="-6dp"
                android:layout_marginLeft="-6dp"/>

            <LinearLayout
                android:id="@+id/next_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite">

                <TextView
                    android:id="@+id/tv_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next_block_preview"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:background="@color/colorPrimary"/>

                <!--下一个方块预览-->
                <FrameLayout
                    android:id="@+id/layout_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <!--分数板块-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_score"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_max_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_score"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_current_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="0"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"/>

            </LinearLayout>




            <Button
                android:id="@+id/btn_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ranking_list"
                android:textAllCaps="false"
                android:textSize="13sp"
                android:background="@drawable/bg_btn2"
                android:layout_marginRight="2dp"
                android:layout_marginTop="3dp"/>

            <Button
                android:id="@+id/btn_restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_restart"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:background="@drawable/bg_btn1"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2dp"/>

            <Button
                android:id="@+id/btn_pause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_pause"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:background="@drawable/bg_btn4"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2dp"/>

        </LinearLayout>


    </LinearLayout>

    //方块控制区域
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="3dp">

        <!--左边控制-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/game_left"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:background="@drawable/bg_btn5"
                    android:layout_margin="3dp"/>


                <Button
                    android:id="@+id/btn_right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/game_right"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:background="@drawable/bg_btn5"
                    android:layout_margin="3dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_down"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/game_down"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:background="@drawable/bg_btn5"
                    android:layout_margin="3dp"/>

            </LinearLayout>

        </LinearLayout>


        <!--右边控制-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_top"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/game_spin"
                android:textSize="15sp"
                android:background="@drawable/bg_btn5"
                android:layout_margin="3dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_bottom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/game_fall"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:background="@drawable/bg_btn5"
                android:layout_margin="3dp"/>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>